best_try_and_best_chance

--- a/html/index.html
+++ b/html/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<!-- 2022-11-03 -->
+<!-- 2022-11-08 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>173.NET</title>
@@ -42,10 +42,15 @@
 
 <h3>当前任务 <span style="font-size: 14px">(<a href="111/tasks.html">全部任务</a>)</span></h3>
 <ul class="org-ul">
-<li>将课本第一二章，看熟、练熟</li>
-<li>能够使用 MVC 独立完成简单的功能</li>
-<li>了解、总结 bootstrap.css 的基本使用</li>
-<li>了解 emmet 插件和 emmet 语法，善于利用此工具提高开发效率</li>
+<li>整理并理解概念:
+<ul class="org-ul">
+<li>面向接口编程</li>
+<li>解耦合</li>
+<li>依赖注入 (DI)</li>
+<li>控制反转 (IoC)</li>
+</ul></li>
+<li>掌握 Microsoft.DI 容器在 MVC 中的基本使用</li>
+<li>预习 18 章，了解更多 DI 容器的知识</li>
 </ul>
 
 <div><br>
@@ -152,7 +157,7 @@
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: 1a2y</p>
-<p class="date">Created: 2022-11-03</p>
+<p class="date">Created: 2022-11-08</p>
 <p class="validation">Go ahead, never stop.</p>
 </div>
 </body>
