best_try_and_best_chance

--- a/html/111/tasks.html
+++ b/html/111/tasks.html
@@ -52,6 +52,12 @@
 <section id="outline-container-active" class="outline-2">
 <h2 id="active"><span class="section-number-2">1.</span> <span class="timestamp-wrapper"><span class="timestamp">[2022-11-08 Tue]</span></span></h2>
 <div class="outline-text-2" id="text-active">
+
+<figure id="orgc62186d">
+<img src="img/oimg_20221108_034512.png" alt="oimg_20221108_034512.png">
+
+</figure>
+
 <ul class="org-ul">
 <li>整理并理解概念:
 <ul class="org-ul">
@@ -62,6 +68,7 @@
 </ul></li>
 <li>掌握 Microsoft.DI 容器在 MVC 中的基本使用</li>
 <li>预习 18 章，了解更多 DI 容器的知识</li>
+<li>务必保证每人第 8 章代码落实到位 (请组长做好监管)</li>
 </ul>
 </div>
 </section>
