--- a/html/index.html
+++ b/html/index.html
@@ -41,6 +41,12 @@
 <section id="toc">
 
 <h3>当前任务 <span style="font-size: 14px">(<a href="111/tasks.html">全部任务</a>)</span></h3>
+
+<figure id="orgaa32796">
+<img src="111/img/oimg_20221108_034512.png" alt="oimg_20221108_034512.png">
+
+</figure>
+
 <ul class="org-ul">
 <li>整理并理解概念:
 <ul class="org-ul">
@@ -51,6 +57,7 @@
 </ul></li>
 <li>掌握 Microsoft.DI 容器在 MVC 中的基本使用</li>
 <li>预习 18 章，了解更多 DI 容器的知识</li>
+<li>务必保证每人第 8 章代码落实到位 (请组长做好监管)</li>
 </ul>
 
 <div><br>
