best_try_and_best_chance

--- a/html/index.html
+++ b/html/index.html
@@ -41,7 +41,7 @@
 <section id="toc">
 
 <h3>当前任务 <span style="font-size: 14px">(<a href="111/tasks.html">全部任务</a>)</span></h3>
-<div style="background: url('img/oimg_20221108_034512.png') no-repeat fixed top">
+<div style="background-image: url('img/oimg_20221108_034512.png')">
 
 <ul class="org-ul">
 <li>整理并理解概念:
