best_try_and_best_chance

--- a/html/111/tasks.html
+++ b/html/111/tasks.html
@@ -52,7 +52,7 @@
 <section id="outline-container-active" class="outline-2">
 <h2 id="active"><span class="section-number-2">1.</span> <span class="timestamp-wrapper"><span class="timestamp">[2022-11-08 Tue]</span></span></h2>
 <div class="outline-text-2" id="text-active">
-<div style="background-image: url(111/img/oimg_20221108_034512.png); color: red;">
+<div style="background-image: url(111/img/oimg_20221108_034512.png); color: green; padding: 1em;">
 
 <ul class="org-ul">
 <li>整理并理解概念:
