best_try_and_best_chance

--- a/html/111/tasks.html
+++ b/html/111/tasks.html
@@ -52,8 +52,6 @@
 <section id="outline-container-active" class="outline-2">
 <h2 id="active"><span class="section-number-2">1.</span> <span class="timestamp-wrapper"><span class="timestamp">[2022-11-08 Tue]</span></span></h2>
 <div class="outline-text-2" id="text-active">
-<div style="background-image: url(111/img/oimg_20221108_034512.png); color: green; padding: 1em;">
-
 <ul class="org-ul">
 <li>整理并理解概念:
 <ul class="org-ul">
@@ -67,9 +65,14 @@
 <li>务必保证每人第 8 章代码落实到位 (请组长做好监管)</li>
 </ul>
 
-</div>
+
+<figure id="org46d6164">
+<img src="img/oimg_20221108_034512.png" alt="oimg_20221108_034512.png">
+
+</figure>
 </div>
 </section>
+
 
 <section id="outline-container-orga67d9b7" class="outline-2">
 <h2 id="orga67d9b7"><span class="section-number-2">2.</span> <span class="timestamp-wrapper"><span class="timestamp">[2022-10-26 Wed]</span></span></h2>
