--- a/html/index.html
+++ b/html/index.html
@@ -41,8 +41,6 @@
 <section id="toc">
 
 <h3>当前任务 <span style="font-size: 14px">(<a href="111/tasks.html">全部任务</a>)</span></h3>
-<div style="background-image: url(111/img/oimg_20221108_034512.png); color: green; padding: 1em;">
-
 <ul class="org-ul">
 <li>整理并理解概念:
 <ul class="org-ul">
@@ -56,7 +54,11 @@
 <li>务必保证每人第 8 章代码落实到位 (请组长做好监管)</li>
 </ul>
 
-</div>
+
+<figure id="orgd9db123">
+<img src="111/img/oimg_20221108_034512.png" alt="oimg_20221108_034512.png">
+
+</figure>
 
 <div><br>
 <h3>笔记目录 <small>(<a href="https://github.com/freelazy/" target="_blank">Github</a>)</small></h3>
