best_try_and_best_chance

--- a/html/index.html
+++ b/html/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<!-- 2022-11-08 -->
+<!-- 2022-11-09 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>173.NET</title>
@@ -55,7 +55,7 @@
 </ul>
 
 
-<figure id="orgd9db123">
+<figure id="orgc5efb70">
 <img src="111/img/oimg_20221108_034512.png" alt="oimg_20221108_034512.png">
 
 </figure>
@@ -164,7 +164,7 @@
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: 1a2y</p>
-<p class="date">Created: 2022-11-08</p>
+<p class="date">Created: 2022-11-09</p>
 <p class="validation">Go ahead, never stop.</p>
 </div>
 </body>
