--- a/html/dotnet/5-aspnet.html
+++ b/html/dotnet/5-aspnet.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<!-- 2022-11-08 -->
+<!-- 2022-11-09 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>ASP.NET</title>
@@ -26,7 +26,7 @@
 <ul>
 <li><a href="#org4d2e173">1.1. 历史</a></li>
 <li><a href="#org706c080">1.2. 规范</a></li>
-<li><a href="#org124540b">1.3. 其他</a>
+<li><a href="#org988bd85">1.3. 其他</a>
 <ul>
 <li><a href="#org13f3194">1.3.1. JIT vs AOT</a></li>
 </ul>
@@ -49,7 +49,7 @@
 </ul>
 </li>
 <li><a href="#org27e318c">5.6. 用户自定义控件</a></li>
-<li><a href="#org988bd85">5.7. 其他</a>
+<li><a href="#org64de0fe">5.7. 其他</a>
 <ul>
 <li><a href="#org3ed183e">5.7.1. 路由 (Route)</a></li>
 <li><a href="#orgbb2d469">5.7.2. 捆绑 (Bundle)</a></li>
@@ -63,7 +63,7 @@
 <ul>
 <li><a href="#orgf24ab64">6.1. MVC</a></li>
 <li><a href="#orgc171ad9">6.2. Lifecycle</a></li>
-<li><a href="#org350d6cf">6.3. Action</a></li>
+<li><a href="#org61a61b9">6.3. Action</a></li>
 <li><a href="#org592c73d">6.4. Razor</a></li>
 <li><a href="#org946e302">6.5. Binding/Validation</a></li>
 <li><a href="#orgc3a6654">6.6. Filter</a></li>
@@ -74,7 +74,7 @@
 <li><a href="#orge8f9cc3">7.1. JSON</a></li>
 <li><a href="#org680ebb4">7.2. WebApiConfig.cs</a></li>
 <li><a href="#orgaf1b1de">7.3. Router</a></li>
-<li><a href="#org61a61b9">7.4. Action</a></li>
+<li><a href="#orgabf139c">7.4. Action</a></li>
 <li><a href="#orgb8b8cf9">7.5. Help</a></li>
 </ul>
 </li>
@@ -99,7 +99,7 @@
 <li><a href="#org6c7ee03">8.4.1. xUnit/Moq</a></li>
 </ul>
 </li>
-<li><a href="#org9596959">8.5. Dependency Inject</a>
+<li><a href="#org96b4954">8.5. Dependency Injection</a>
 <ul>
 <li><a href="#org5d6bb87">8.5.1. 举例说明，分离是技术进步的象征</a></li>
 <li><a href="#orgdc58933">8.5.2. 面向对象语言</a></li>
@@ -202,8 +202,8 @@
 </div>
 </div>
 
-<div id="outline-container-org124540b" class="outline-3">
-<h3 id="org124540b"><span class="section-number-3">1.3.</span> 其他</h3>
+<div id="outline-container-org988bd85" class="outline-3">
+<h3 id="org988bd85"><span class="section-number-3">1.3.</span> 其他</h3>
 <div class="outline-text-3" id="text-1-3">
 </div>
 <div id="outline-container-org13f3194" class="outline-4">
@@ -571,7 +571,7 @@ Global.asax:
 <h3 id="orgeca96eb"><span class="section-number-3">5.3.</span> Page 的生命周期</h3>
 <div class="outline-text-3" id="text-5-3">
 
-<figure id="org98d6df1">
+<figure id="org4c654ab">
 <img src="img/oimg_20220928_005325.png" alt="oimg_20220928_005325.png">
 
 </figure>
@@ -761,7 +761,7 @@ Unload:
 <p>
 Code Action Task:
 </p>
-<pre class="example" id="orgf79b9f9">
+<pre class="example" id="orgd80a2d2">
 ----------------------    -------
 | .                  |    | 验证 |
 ----------------------    -------
@@ -818,7 +818,7 @@ Code Action Task:
 <p>
 Code Action Task:
 </p>
-<pre class="example" id="org3189129">
+<pre class="example" id="org108c459">
 在页面中，显示:
 : 这是本页面在 Page 生命中，被访问的第 N 次。
 
@@ -1037,8 +1037,8 @@ studentsGV.<span style="color: #721045;">DataBind</span><span style="color: #000
 </div>
 </div>
 
-<div id="outline-container-org988bd85" class="outline-3">
-<h3 id="org988bd85"><span class="section-number-3">5.7.</span> 其他</h3>
+<div id="outline-container-org64de0fe" class="outline-3">
+<h3 id="org64de0fe"><span class="section-number-3">5.7.</span> 其他</h3>
 <div class="outline-text-3" id="text-5-7">
 </div>
 <div id="outline-container-org3ed183e" class="outline-4">
@@ -1145,7 +1145,7 @@ ASP.NET MVC:
 <h3 id="orgc171ad9"><span class="section-number-3">6.2.</span> Lifecycle</h3>
 <div class="outline-text-3" id="text-6-2">
 
-<figure id="orgb4a0053">
+<figure id="orged6cebf">
 <img src="img/mvc-lifecycle.png" alt="mvc-lifecycle.png">
 
 </figure>
@@ -1224,8 +1224,8 @@ controller.<span style="color: #721045;">Execute</span><span style="color: #0000
 </div>
 </div>
 
-<div id="outline-container-org350d6cf" class="outline-3">
-<h3 id="org350d6cf"><span class="section-number-3">6.3.</span> Action</h3>
+<div id="outline-container-org61a61b9" class="outline-3">
+<h3 id="org61a61b9"><span class="section-number-3">6.3.</span> Action</h3>
 <div class="outline-text-3" id="text-6-3">
 <ul class="org-ul">
 <li>Action 是 Controller 里面用来处理请求产生响应的一个方法</li>
@@ -1463,8 +1463,8 @@ api/{controller}/{id}
 </div>
 </div>
 
-<div id="outline-container-org61a61b9" class="outline-3">
-<h3 id="org61a61b9"><span class="section-number-3">7.4.</span> Action</h3>
+<div id="outline-container-orgabf139c" class="outline-3">
+<h3 id="orgabf139c"><span class="section-number-3">7.4.</span> Action</h3>
 <div class="outline-text-3" id="text-7-4">
 <p>
 方法名字 vs 请求方法:
@@ -2019,10 +2019,18 @@ Moq links:
 </div>
 </div>
 
-<div id="outline-container-org9596959" class="outline-3">
-<h3 id="org9596959"><span class="section-number-3">8.5.</span> Dependency Inject</h3>
+<div id="outline-container-org96b4954" class="outline-3">
+<h3 id="org96b4954"><span class="section-number-3">8.5.</span> Dependency Injection</h3>
 <div class="outline-text-3" id="text-8-5">
+<p>
+参考:
+</p>
+<ul class="org-ul">
+<li>官方文档: <a href="https://learn.microsoft.com/zh-cn/dotnet/core/extensions/dependency-injection">https://learn.microsoft.com/zh-cn/dotnet/core/extensions/dependency-injection</a></li>
+<li>IoC: <a href="https://learn.microsoft.com/zh-cn/dotnet/architecture/modern-web-apps-azure/architectural-principles#dependency-inversion">https://learn.microsoft.com/zh-cn/dotnet/architecture/modern-web-apps-azure/architectural-principles#dependency-inversion</a></li>
+</ul>
 </div>
+
 <div id="outline-container-org5d6bb87" class="outline-4">
 <h4 id="org5d6bb87"><span class="section-number-4">8.5.1.</span> 举例说明，分离是技术进步的象征</h4>
 <div class="outline-text-4" id="text-8-5-1">
@@ -2251,7 +2259,7 @@ c.<span style="color: #721045;">Index</span><span style="color: #000000;">()</sp
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: 1a2y</p>
-<p class="date">Created: 2022-11-08</p>
+<p class="date">Created: 2022-11-09</p>
 <p class="validation">Go ahead, never stop.</p>
 </div>
 </body>
